src/test/ui/moves/moves-based-on-type-exprs.stderr
error[E0382]: use of moved value: `x`
  --> $DIR/moves-based-on-type-exprs.rs:12:12
   |
LL |     let _y = Foo { f:x };
   |                      - value moved here
LL |     touch(&x);
   |            ^ value used here after move
   |
   = note: move occurs because `x` has type `std::string::String`, which does not implement the `Copy` trait

error[E0382]: use of moved value: `x`
  --> $DIR/moves-based-on-type-exprs.rs:18:12
   |
LL |     let _y = (x, 3);
   |               - value moved here
LL |     touch(&x);
   |            ^ value used here after move
   |
   = note: move occurs because `x` has type `std::string::String`, which does not implement the `Copy` trait

error[E0382]: use of moved value: `x`
  --> $DIR/moves-based-on-type-exprs.rs:35:12
   |
LL |         x
   |         - value moved here
...
LL |     touch(&x);
   |            ^ value used here after move
   |
   = note: move occurs because `x` has type `std::string::String`, which does not implement the `Copy` trait

error[E0382]: use of moved value: `y`
  --> $DIR/moves-based-on-type-exprs.rs:36:12
   |
LL |         y
   |         - value moved here
...
LL |     touch(&y);
   |            ^ value used here after move
   |
   = note: move occurs because `y` has type `std::string::String`, which does not implement the `Copy` trait

error[E0382]: use of moved value: `x`
  --> $DIR/moves-based-on-type-exprs.rs:46:12
   |
LL |         true => x,
   |                 - value moved here
...
LL |     touch(&x);
   |            ^ value used here after move
   |
   = note: move occurs because `x` has type `std::string::String`, which does not implement the `Copy` trait

error[E0382]: use of moved value: `y`
  --> $DIR/moves-based-on-type-exprs.rs:47:12
   |
LL |         false => y
   |                  - value moved here
...
LL |     touch(&y);
   |            ^ value used here after move
   |
   = note: move occurs because `y` has type `std::string::String`, which does not implement the `Copy` trait

error[E0382]: use of moved value: `x`
  --> $DIR/moves-based-on-type-exprs.rs:58:12
   |
LL |         _ if guard(x) => 10,
   |                    - value moved here
...
LL |     touch(&x);
   |            ^ value used here after move
   |
   = note: move occurs because `x` has type `std::string::String`, which does not implement the `Copy` trait

error[E0382]: use of moved value: `x`
  --> $DIR/moves-based-on-type-exprs.rs:65:12
   |
LL |     let _y = [x];
   |               - value moved here
LL |     touch(&x);
   |            ^ value used here after move
   |
   = note: move occurs because `x` has type `std::string::String`, which does not implement the `Copy` trait

error[E0382]: use of moved value: `x`
  --> $DIR/moves-based-on-type-exprs.rs:71:12
   |
LL |     let _y = vec![x];
   |                   - value moved here
LL |     touch(&x);
   |            ^ value used here after move
   |
   = note: move occurs because `x` has type `std::string::String`, which does not implement the `Copy` trait

error[E0382]: use of moved value: `x`
  --> $DIR/moves-based-on-type-exprs.rs:77:12
   |
LL |     let _y = x.into_iter().next().unwrap();
   |              - value moved here
LL |     touch(&x);
   |            ^ value used here after move
   |
   = note: move occurs because `x` has type `std::vec::Vec<std::string::String>`, which does not implement the `Copy` trait

error[E0382]: use of moved value: `x`
  --> $DIR/moves-based-on-type-exprs.rs:83:12
   |
LL |     let _y = [x.into_iter().next().unwrap(); 1];
   |               - value moved here
LL |     touch(&x);
   |            ^ value used here after move
   |
   = note: move occurs because `x` has type `std::vec::Vec<std::string::String>`, which does not implement the `Copy` trait

error: aborting due to 11 previous errors

For more information about this error, try `rustc --explain E0382`.
